--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.11"
   },
+  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
