--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "concurrently": "^3.5.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
-    "mongoose": "^4.11.7"
+    "mongoose": "^4.11.7",
+    "nodemailer": "^4.0.1"
   }
 }
